--- a/default.conf
+++ b/default.conf
@@ -11,7 +11,7 @@ server{
         #server_name ;
 
         location / {
-                try_files $uri $uri/ /api.php
+                try_files $uri $uri/ /api.php;
         }
         location ~\.php$ {
                 try_files $uri /index.php =404;
