--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,7 @@ server{
         #server_name ;
 
         location / {
+                index  index.htm index.html index.php;
                 try_files $uri $uri/ /api.php;
         }
         location ~\.php$ {
